unpackaged/main/default/objects/Credit_Check_Result__c/Credit_Check_Result__c.object-meta.xml
<CustomObject>
    <label>Credit Check Result</label>
    <nameField>
        <label>Financier</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Credit Check Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>