unpackaged/main/default/objects/Credit_Check_Result__c/fields/Co_borrower__c.field-meta.xml
<CustomField>
    <fullName>Co_borrower__c</fullName>
    <externalId>true</externalId>
    <label>Co-borrower</label>
    <length>120</length>
    <type>Text</type>
</CustomField>