unpackaged/main/default/objects/Credit_Check_Result__c/fields/Credit_Decision__c.field-meta.xml
<CustomField>
    <fullName>Credit_Decision__c</fullName>
    <label>Credit Decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved with Stips</fullName>
            </value>
            <value>
                <fullName>Conditionally Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>