unpackaged/main/default/objects/Credit_Check_Result__c/listViews/Default_view.listView-meta.xml
<ListView>
    <fullName>Default_view</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Default view</label>
</ListView>